deploykubernetes/04-square-svc-v2.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-v2-svc
spec:
  selector:
    app: hello-v2
  type: NodePort 
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
