deploykubernetes/05-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: demo.challenge.task 
    http:
      paths: 
      - path: /greetings
        backend:
          serviceName: hello-v1-svc
          servicePort: 80
      - path: /square
        backend:
          serviceName: hello-v2-svc
          servicePort: 80
